refactor(backend): Java 17+ 및 Optional 안티패턴 개선
Java Coding Standards 기준에 따라 안티패턴들을 개선했습니다.
1. Optional.get() 호출을 map(), orElse(), orElse(null) 로 치환하여 잠재적인 NoSuchElementException 예방
2. Stream 파이프라인의 .collect(Collectors.toList())를 Java 16+의 간결한 .toList()로 리팩토링